--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-ATLAS_URL=mongodb+srv://bscCohort:Crimsy!2345@cluster0.ws1rq5o.mongodb.net/books?retryWrites=true&w=majority
+ATLAS_URL=mongodb+srv://sandip1999padhy:ZwnNEA6qhn2RVv9w@cluster0.kt98t1u.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
